# tabor

./: Makefile  flake.nix
alacritty/src/: event.rs  window_context.rs
alacritty/src/config/: bindings.rs
alacritty/src/display/: mod.rs  tab_panel.rs
docs/: features.md  ipc.md
extra/completions/: _tabor  tabor.bash  tabor.fish
extra/man/: alacritty-bindings.5.scd  tabor-msg.1.scd
extra/osx/Tabor.app/Contents/: Info.plist
scripts/: README.md  run.sh  web-popup-smoke.sh
tabor/: Cargo.toml  build.rs
tabor/src/: cli.rs  event.rs  ipc.rs  main.rs  tab_panel.rs  web_url.rs  window_context.rs
tabor/src/display/: mod.rs  tab_panel.rs
tabor/src/input/: keyboard.rs  mod.rs
tabor/src/macos/: mod.rs  open_documents.rs  remote_inspector.rs  webview.rs
