[package]
name = "tabor"
version = "0.17.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "A tabbed, cross-platform, OpenGL terminal emulator"
readme = "README.md"
homepage = "https://github.com/tartavull/tabor"
repository = "https://github.com/tartavull/tabor"
edition.workspace = true
rust-version.workspace = true

[dependencies.tabor_terminal]
path = "../tabor_terminal"
version = "0.25.2-dev"

[dependencies.tabor_config_derive]
path = "../tabor_config_derive"
version = "0.2.6-dev"

[dependencies.tabor_config]
path = "../tabor_config"
version = "0.2.4-dev"

[dependencies]
ahash = { version = "0.8.6", features = ["no-rng"] }
bitflags = "2.2.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
copypasta = { version = "0.10.1", default-features = false }
crossfont = "0.8.1"
glutin = { version = "0.32.2", default-features = false, features = ["egl", "wgl"] }
home = "0.5.5"
libc = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
notify = "8.0.0"
parking_lot = "0.12.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
tempfile = "3.12.0"
toml.workspace = true
toml_edit.workspace = true
unicode-width = "0.2.0"
url = "2.5.2"
winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "serde"] }

[build-dependencies]
gl_generator = "0.14.0"

[dev-dependencies]
clap_complete = "4.2.3"

[target.'cfg(not(windows))'.dependencies]
xdg = "3.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
png = { version = "0.17.5", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
image = { version = "0.25.2", default-features = false, features = ["png", "ico", "jpeg", "gif", "bmp"] }
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSGeometry",
    "NSString",
    "NSLocale",
    "NSUserDefaults",
    "NSValue",
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "block2",
    "NSColorSpace",
    "NSEvent",
    "NSGraphicsContext",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
ureq = "2.9.7"

[target.'cfg(windows)'.dependencies]
dirs = "6.0.0"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
default = ["wayland", "x11"]
x11 = [
    "copypasta/x11",
    "winit/x11",
    "glutin/x11",
    "glutin/glx",
    "png",
]
wayland = [
    "copypasta/wayland",
    "glutin/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-crossfont",
]
nightly = []
